# OpenGL-Learning

./: .clang-format  CMakeLists.txt  main.cpp
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: main.cpp
src/engine/: shader.cpp  shader.h
src/shaders/: shader.fs  shader.vs  shader2.fs
